fixed mobile issue of margins and overlap

--- a/style.css
+++ b/style.css
@@ -167,5 +167,6 @@ input {
 	.headSpan {
 		display: block;
 		margin: 0 auto;
+		width: 80%;
 	}
 }
